force-app/main/default/objects/InboundCase__e/InboundCase__e.object-meta.xml
<CustomObject>
    <label>Inbound Case</label>
    <pluralLabel>Inbound Case</pluralLabel>
</CustomObject>