force-app/main/default/objects/InboundCase__e/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <label>Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>