force-app/main/default/objects/InboundCase__e/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Pertains to the External Id of the Case, used when upserting case records.</description>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>