force-app/main/default/objects/InboundCase__e/fields/MSTSId__c.field-meta.xml
<CustomField>
    <fullName>MSTSId__c</fullName>
    <label>MSTS Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>