force-app/main/default/objects/InboundCase__e/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Id of the source record</description>
    <label>Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>