force-app/main/default/objects/InboundCase__e/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Case Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>