force-app/main/default/objects/InboundCase__e/fields/SuppliedPhone__c.field-meta.xml
<CustomField>
    <fullName>SuppliedPhone__c</fullName>
    <label>Supplied Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>